@@ -250,6 +250,10 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * Enable QueryPage classes to override list formatting
 * (bug 5485) Show number of intervening revisions in diff view
 * (bug 8100) Fix XHTML validity in Taiwanese localization
+* Added redirect to section feature. Use it wisely.
+* Added a configuration variable allowing the "break out of framesets" feature 
+  to be switched on and off ($wgBreakFrames). Off by default.
+
 
 == Languages updated ==
 
